--- a/WebDasar/assets/css/style.css
+++ b/WebDasar/assets/css/style.css
@@ -5,3 +5,9 @@
   padding: 8px 12px;
   background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);
 }
+.phone {
+  font-weight: bold;
+}
+.bahan {
+  color: red;
+}
