--- a/WebDasar/assets/css/style.css
+++ b/WebDasar/assets/css/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: "Quicksand", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 .shadowbox {
   width: 15em;
@@ -72,4 +74,8 @@ nav li {
 nav {
   background-color: #00a2c6;
   padding: 5px;
+}
+
+main {
+  padding: 20px;
 }
