--- a/WebDasar/assets/css/style.css
+++ b/WebDasar/assets/css/style.css
@@ -95,3 +95,10 @@ aside {
   width: 25%;
   padding-left: 20px;
 }
+
+@media screen and (max-width: 1000px) {
+  #content, aside {
+    width: 100%;
+    padding: 0;
+  }
+}
