--- a/WebDasar/assets/css/style.css
+++ b/WebDasar/assets/css/style.css
@@ -78,6 +78,8 @@ nav li {
 nav {
   background-color: #00a2c6;
   padding: 5px;
+  position: sticky;
+  top: 0;
 }
 
 main {
@@ -94,6 +96,10 @@ aside {
   float: right;
   width: 25%;
   padding-left: 20px;
+}
+
+header {
+  display: inline;
 }
 
 @media screen and (max-width: 1000px) {
