--- a/WebDasar/assets/css/style.css
+++ b/WebDasar/assets/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -20,7 +20,8 @@ body {
 .bahan {
   color: red;
 }
-h2,h3 {
+h2,
+h3 {
   color: #00a2c6;
 }
 footer {
@@ -55,10 +56,16 @@ nav a:hover {
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  /* Before */
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   padding: 20px;
-  margin-top: 20px;
+  margin-top: 20px; */
+
+  /* After */
+  box-shadow: 0 2px 8px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 20px;
 }
 
 .jumbotron {
@@ -69,8 +76,15 @@ nav a:hover {
   color: white;
 }
 
+nav ul {
+  /*  properti padding-inline membuat padding secara horizontal */
+  padding-inline: 4rem;
+  display: flex;
+  /* gap untuk memberikan jarak atau celah antar tombol navigasi */
+  gap: 2rem;
+}
+
 nav li {
-  display: inline;
   list-style-type: none;
   margin-right: 20px;
 }
@@ -84,27 +98,55 @@ nav {
 
 main {
   padding: 20px;
-  overflow: auto;
+  /* menambahkan properti display: flex pada elemen main agar menjadi flex container */
+  display: flex;
+  gap: 1.5rem;
 }
 
 #content {
-  float: left;
-  width: 75%;
+  /* Before */
+  /* float: left;
+     width: 75%; */
+
+  /* After */
+  flex: 5;
+  /* membuat layout untuk setiap card menggunakan flexbox */
+  display: flex;
+  flex-flow: column nowrap;
+  /* menggunakan properti gap untuk memberi jarak celah setiap artikel */
+  gap: 1rem 2rem;
 }
 
 aside {
-  float: right;
+  /* Before */
+  /* float: right;
   width: 25%;
-  padding-left: 20px;
+  padding-left: 20px; */
+
+  /* After */
+  flex: 1;
 }
 
 header {
   display: inline;
 }
 
-@media screen and (max-width: 1000px) {
-  #content, aside {
-    width: 100%;
-    padding: 0;
+@media screen and (max-width: 1200px) {
+  main {
+    flex-flow: column nowrap;
+  }
+
+  main aside {
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  nav ul {
+    justify-content: center;
+  }
+ 
+  main aside {
+    align-self: stretch;
   }
 }
